[gd_scene load_steps=20 format=3 uid="uid://cnua8fiaptfbd"]

[ext_resource type="Script" path="res://scenes/Enemy.gd" id="1"]
[ext_resource type="Script" path="res://addons/behavior_tree/nodes/bt_root.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://xyncduhtpd0n" path="res://assets/enemy/character_0017.png" id="3"]
[ext_resource type="Texture2D" uid="uid://b5rjqy3ljg8kt" path="res://assets/enemy/character_0016.png" id="4"]
[ext_resource type="Script" path="res://addons/behavior_tree/nodes/composites/selector.gd" id="5"]
[ext_resource type="Script" path="res://scenes/Patrol.gd" id="6"]
[ext_resource type="Script" path="res://addons/behavior_tree/nodes/composites/sequence.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://b8yq15a1i0ch" path="res://assets/enemy/character_0015.png" id="8"]
[ext_resource type="Script" path="res://scenes/caught.gd" id="9"]
[ext_resource type="Script" path="res://scenes/chase.gd" id="10"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [ExtResource("8"), ExtResource("3"), ExtResource("4")],
"loop": true,
"name": &"chase",
"speed": 20.0
}, {
"frames": [ExtResource("4"), ExtResource("3")],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(10, 16)

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(6, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i67al"]
size = Vector2(20, 14)

[sub_resource type="Shader" id="Shader_8hsbf"]
code = "shader_type canvas_item;

uniform vec3 trail_color : source_color; // Edit as a color.

void fragment() {
vec4 texColor = texture(TEXTURE,UV);
 COLOR.rgba = vec4 (trail_color,texColor.a-0.5);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bc0o3"]
shader = SubResource("Shader_8hsbf")
trail_color = Color(0.988235, 0.407843, 0.231373, 1)

[sub_resource type="Curve" id="Curve_1nu21"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.251295, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_51ygw"]
curve = SubResource("Curve_1nu21")

[sub_resource type="ParticleProcessMaterial" id="ParticlesMaterial_35fgp"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_curve = SubResource("CurveTexture_51ygw")

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -12)
frames = SubResource("1")
animation = &"chase"
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("2")

[node name="CheckFall" type="RayCast2D" parent="."]
position = Vector2(5, -9)
target_position = Vector2(0, 15)
collide_with_areas = true

[node name="BehaviorTreeRoot" type="Node" parent="."]
script = ExtResource("2")

[node name="DoOneOfTheFollowing" type="Node" parent="BehaviorTreeRoot"]
script = ExtResource("5")

[node name="attack" type="Node" parent="BehaviorTreeRoot/DoOneOfTheFollowing"]
script = ExtResource("7")

[node name="chase" type="Node" parent="BehaviorTreeRoot/DoOneOfTheFollowing/attack"]
script = ExtResource("10")

[node name="caught" type="Node" parent="BehaviorTreeRoot/DoOneOfTheFollowing/attack"]
script = ExtResource("9")

[node name="Patrol" type="Node" parent="BehaviorTreeRoot/DoOneOfTheFollowing"]
script = ExtResource("6")

[node name="deadly_area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="deadly_area"]
position = Vector2(-0.5, -8)
scale = Vector2(1.5, 1)
shape = SubResource("8")

[node name="chase_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="chase_area"]
position = Vector2(0, -8)
scale = Vector2(6, 1)
shape = SubResource("RectangleShape2D_i67al")

[node name="VisibilityNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(0.68, 0.8)

[node name="DashingParticles" type="GPUParticles2D" parent="."]
show_behind_parent = true
material = SubResource("ShaderMaterial_bc0o3")
position = Vector2(0, -12)
emitting = false
amount = 15
lifetime = 0.4
process_material = SubResource("ParticlesMaterial_35fgp")
texture = ExtResource("8")

[connection signal="area_entered" from="deadly_area" to="BehaviorTreeRoot/DoOneOfTheFollowing/attack/chase" method="_on_deadly_area_area_entered"]
[connection signal="body_entered" from="chase_area" to="BehaviorTreeRoot/DoOneOfTheFollowing/attack/chase" method="_on_chase_area_body_entered"]
[connection signal="body_exited" from="chase_area" to="BehaviorTreeRoot/DoOneOfTheFollowing/attack/chase" method="_on_chase_area_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
